Force the screen locker's greeter to show the password input field in case of immediateLock

If the screen locker is set to not require a password to unlock, it will
not show the password input field even when the powermanagement settings
suspend the system and are set to require a password after resume (when
it was already running at that point).
This locks people out of their system.

This patch adds a signal handler for SIGUSR1 that switches the running
greeter to immediateLock mode. The locker sends that signal to make sure
the greeter shows the password input field when necessary.

BUG: 327947
BUG: 329076
FIXED-IN: 4.11.9
REVIEW: 117091